fixes more spacing issues

--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -75,7 +75,7 @@ h2{
 	font-size: 2.5rem;
 	font-weight: 700;
 	margin: 10px 0px;
-	padding: 10px 0px
+	padding: 10px 0px 0px;
 }
 
 h3{
@@ -302,7 +302,6 @@ button.material-symbols-outlined{
 
 table, th, td{
 	border: solid 1.5px #222;
-	margin-top:10px;
 }
 
 th{
